Modal view of uploadable image
- set display none

--- a/src/client/scss/x/_uploadable-image.scss
+++ b/src/client/scss/x/_uploadable-image.scss
@@ -37,6 +37,13 @@
 		}
 	}
 
+	.x-modalview{
+		display: none;
+		&.x-open{
+			display: block;
+		}
+	}	
+
 	.x-modalview-close {
 		display: block;
 		position: absolute;
